[package]
name = "blakeout-gpu"
version = "0.1.0"
edition = "2021"
authors = ["ALFIS Team"]
description = "GPU-accelerated Blakeout hash implementation using CUDA"
license = "MIT OR Apache-2.0"

[dependencies]
blakeout = { path = "../blakeout-master" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
